<resources>
    <string name="app_name">Wakelock v3</string>
    <string name="label_settings">Settings</string>
    <string name="action_start">Start</string>
    <string name="label_wakelock_full">Screen and Keyboard</string>
    <string name="description_wakelock_full">Keep the display and keyboard at full brightness. If you press the power button, the lock will be implicitly released by the system.</string>
    <string name="label_wakelock_partial">Processor</string>
    <string name="description_wakelock_partial">Keep the CPU from going into a standby/low-power mode, even if the power button is pressed or the display times out. If your device has trouble waking up, this is the lock you want.</string>
    <string name="label_wakelock_screen_dim">Screen dimmed</string>
    <string name="description_wakelock_screen_dim">Keep the screen on, but allow it to dim. If you press the power button, the lock will be implicitly released by the system.</string>
    <string name="label_wakelock_screen_bright">Screen bright</string>
    <string name="description_wakelock_screen_bright">Keep the screen at full brightness. If you press the power button, the lock will be implicitly released by the system.</string>
    <string name="label_wifilock_full">Wi-Fi normal</string>
    <string name="description_wifilock_full">Wi-Fi will stay active and behave normally, performance and loss will depend on other factors, e.g. whether the screen is off.</string>
    <string name="label_wifilock_full_perf">Wi-Fi high performance</string>
    <string name="description_wifilock_full_perf">Wi-Fi will stay active and in high-performance mode even if the screen is off.</string>
    <string name="label_wifilock_scan_only">Wi-Fi scan-only</string>
    <string name="description_wifilock_scan_only">When the phone goes into standby, Wi-Fi will be kept active but only scans will be allowed.</string>
    <string name="label_notification_channel_status">Status</string>
    <string name="status_text_idle">Idle</string>
    <string name="galaxy_note4_issue_hint">Known to fix Galaxy Note 4 issues</string>
    <string name="label_autostart_on_boot">Autostart on boot</string>
    <string name="description_autostart_on_boot">Acquire the configured locks automatically after reboots.</string>
    <string name="action_donate">Donate</string>
    <string name="label_category_other">Other</string>
    <string name="label_category_general">General</string>
    <string name="pause_description_manually_resume">You can manually resume the locks by pressing play.</string>
    <string name="pause_description_call_only">Locks are paused because the option to only acquire them during calls is enabled.</string>
    <string name="action_pause">Pause</string>
    <string name="description_onboarding_what">This app allows you to manually acquire a \'wakelock\' which influences device power management by keeping components from going into standby.</string>
    <string name="description_onboarding_what_not">This app does not detect or release wakelocks from other apps. It will most likely not improve your battery life.</string>
    <string name="description_onboarding_legacy_version">After surviving Android for over 6 years this app deserved a little overhaul. If you don\'t like the redesign you can switch to the legacy version.</string>
    <string name="action_download_legacy_version">Download legacy version</string>
    <string name="description_onboarding_questions">More questions? Mail me!</string>
    <string name="label_privacy_policy">Privacy policy</string>
    <string name="description_darken">The guy who wrote this app.</string>
    <string name="description_privacy_policy">What happens with your data (hint: nothing).</string>
    <string name="label_bugreporting">Bug Reporting</string>
    <string name="donation_coffee_label">A calming coffee</string>
    <string name="donation_pizza_label">One tasty pizza</string>
    <string name="donation_coffee_description">What keeps the developer awake at night? Your coffee and Samsung\'s bugs.</string>
    <string name="donation_pizza_description">Contrary to popular opinion developers do actually need to buy food too :). With onions, mushrooms and salami please.</string>
    <string name="label_donation">Donation</string>
    <string name="label_donation_edition">Donation edition</string>
    <string name="msg_thank_you">Thank you</string>
    <string name="description_icon_thanks_max_patchs">Thanks to Max Patchs for the wonderful icons.</string>
    <string name="description_bugreporting">Automatic bug reporting to help fix issues faster.</string>
    <string name="label_call_autostart">Autostart during calls</string>
    <string name="description_call_autostart">Acquire the selected wakelocks only during calls.</string>
    <plurals name="x_locks_acquired">
        <item quantity="one">%d lock acquired</item>
        <item quantity="other">%d locks acquired</item>
    </plurals>
</resources>
