<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.onboarding.OnboardingFragment">

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/action_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_vertical"
            tools:context=".main.ui.onboarding.OnboardingFragment">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintEnd_toStartOf="@+id/title"
                app:layout_constraintTop_toTopOf="@+id/title"
                app:srcCompat="@drawable/ic_icon_bulb_24dp"/>

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/what_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/what_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/what_description"
                app:srcCompat="@drawable/ic_thumb_up_white_24dp"/>

            <TextView
                android:id="@+id/what_description"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="56dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="32dp"
                android:text="@string/description_onboarding_what"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"/>

            <ImageView
                android:id="@+id/what_not_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/what_not_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/what_not_description"
                app:srcCompat="@drawable/ic_thumb_down_white_24dp"/>

            <TextView
                android:id="@+id/what_not_description"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="56dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="16dp"
                android:text="@string/description_onboarding_what_not"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/what_description"/>


            <ImageView
                android:id="@+id/legacy_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/legacy_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/legacy_description"
                app:srcCompat="@drawable/ic_settings_backup_restore_white_24dp"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/legacy_description"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="56dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="16dp"
                android:text="@string/description_onboarding_legacy_version"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/what_not_description"
                tools:visibility="visible"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/legacy_action"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/action_download_legacy_version"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/legacy_description"
                app:layout_constraintStart_toStartOf="@+id/legacy_description"
                app:layout_constraintTop_toBottomOf="@+id/legacy_description"
                tools:visibility="visible"/>

            <ImageView
                android:id="@+id/questions_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/questions_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/questions_description"
                app:srcCompat="@drawable/ic_question_answer_white_24dp"/>

            <TextView
                android:id="@+id/questions_description"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="56dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="16dp"
                android:text="@string/description_onboarding_questions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/legacy_action"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.button.MaterialButton
        android:id="@+id/action_start"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:textColor="@android:color/primary_text_light"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/action_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_container"/>


</android.support.constraint.ConstraintLayout>